# rep1

./: hello.py  pyproject.toml
Analytics_&_Insights/: netflix_content_strategy_analysis.ipynb  rainfall_trends_India_analysis.ipynb
real_time_stock_market_analysis_forecasting_system/: main.py  stock_forecast_app.py
