[project]
name = "cla-christmas-break"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "apscheduler>=3.11.0",
    "jupyterlab>=4.3.4",
    "matplotlib>=3.10.0",
    "pandas>=2.2.3",
    "plotly>=5.24.1",
    "pmdarima==2.0.2",
    "statsmodels>=0.14.4",
    "streamlit>=1.41.1",
    "tensorflow>=2.18.0",
    "yfinance>=0.2.51",
]
